# music_splitter

./: Plan.md  pyproject.toml
scripts/: download_acappella.sh  download_all.sh  download_dagstuhl.sh  download_jacappella.sh  download_musdb18hq.sh
src/: train.py
src/data/: __init__.py  augmentation.py  batch.py  dagstuhl.py  jacappella.py
src/losses/: __init__.py  composite.py  pit.py  sisdr.py  stft.py
src/model/: __init__.py  sepreformer.py
tests/: test_augmentation.py  test_losses.py  test_model.py
