[project]
name = "music-splitter"
version = "0.1.0"
description = "Vocal harmony separation using SepReformer"
requires-python = ">=3.11"
dependencies = [
    "jax[cpu]>=0.4.30",
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "jaxtyping>=0.2.28",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "numpy>=1.26",
    "tensorboardX>=2.6",
    "tqdm>=4.66",
]

[project.optional-dependencies]
gpu = ["jax[cuda12]>=0.4.30"]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
